==> darsolano/LPC1788_Libraries/src/Elegoo/DS3231.c <==
#include <Elegoo/DS3231.h>
#include <stdio.h>
#include <string.h>
#include "Elegoo/DS3231.h"

Bool DS3231_setDateTime(uint16_t year, uint8_t month, uint8_t day, uint8_t hour, uint8_t minute, uint8_t second)
{
	uint8_t buf[10] = {0};
	I2C_XFER_T xfer = {0};

	buf[0] = DS3231_REG_TIME;
	buf[1] = (dec2bcd(second));
    buf[2] = (dec2bcd(minute));
    buf[3] = (dec2bcd(hour));
    buf[4] = (dec2bcd(dow(year, month, day)));
    buf[5] = (dec2bcd(day));
    buf[6] = (dec2bcd(month));
    buf[7] = (dec2bcd(year-2000));

    xfer.slaveAddr = DS3231_ADDRESS;
    xfer.txBuff = buf;
    xfer.txSz = 8;
	Chip_I2C_MasterTransfer(i2cx, &xfer);

	if (!xfer.txSz) return true;
	else return false;
}

int DS3231_getDateTime(RTCDateTime* t)
{
    uint8_t values[7];
    int result = 0;

    result = Chip_I2C_MasterCmdRead(i2cx, DS3231_ADDRESS, DS3231_REG_TIME, values, 7);

    t->second 		= bcd2dec(values[0]);
    t->minute 		= bcd2dec(values[1]);
    t->hour 		= bcd2dec(values[2]);
    t->dayOfWeek 	= bcd2dec(values[3]);
    t->day 			= bcd2dec(values[4]);
    t->month 		= bcd2dec(values[5]);
    t->year 		= bcd2dec(values[6]) +2000;
    t->unixtime 	= unixtime(t);

    return result;
}

void DS3231_enableOutput(bool enabled)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_CONTROL);

    value &= 0b11111011;
    value |= (!enabled << 2);

    writeRegister8(DS3231_REG_CONTROL, value);
}

void DS3231_setBattery(bool timeBattery, bool squareBattery)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_CONTROL);

    if (squareBattery)
    {
        value |= 0b01000000;
    } else
    {
        value &= 0b10111111;
    }

    if (timeBattery)
    {
        value &= 0b01111011;
    } else
    {
        value |= 0b10000000;
    }

    writeRegister8(DS3231_REG_CONTROL, value);
}

bool DS3231_isOutput(void)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_CONTROL);

    value &= 0b00000100;
    value >>= 2;

    return !value;
}

void DS3231_setOutput(DS3231_sqw_t mode)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_CONTROL);

    value &= 0b11100111;
    value |= (mode << 3);

    writeRegister8(DS3231_REG_CONTROL, value);
}

DS3231_sqw_t DS3231_getOutput(void)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_CONTROL);

    value &= 0b00011000;
    value >>= 3;

    return (DS3231_sqw_t)value;
}

void DS3231_enable32kHz(bool enabled)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_STATUS);

    value &= 0b11110111;
    value |= (enabled << 3);

    writeRegister8(DS3231_REG_STATUS, value);
}

bool DS3231_is32kHz(void)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_STATUS);

    value &= 0b00001000;
    value >>= 3;

    return value;
}

void DS3231_forceConversion(void)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_CONTROL);

    value |= 0b00100000;

    writeRegister8(DS3231_REG_CONTROL, value);

    do {} while ((readRegister8(DS3231_REG_CONTROL) & 0b00100000) != 0);
}

float DS3231_readTemperature(void)
{
    uint8_t bytes[2] = {0};

    Chip_I2C_MasterCmdRead(i2cx, DS3231_ADDRESS, DS3231_REG_TEMPERATURE, bytes, 2);

    return ((((short)bytes[0] << 8) | (short)bytes[1]) >> 6) / 4.0f;
}

void DS3231_getAlarm1(RTCAlarmTime* a)
{
    uint8_t values[4];

    Chip_I2C_MasterCmdRead(i2cx, DS3231_ADDRESS, DS3231_REG_ALARM_1, values, 4);

    a->day 		= bcd2dec(values[0] & 0b01111111);
    a->hour 	= bcd2dec(values[1] & 0b01111111);
    a->minute 	= bcd2dec(values[2] & 0b01111111);
    a->second 	= bcd2dec(values[3] & 0b01111111);

}

DS3231_alarm1_t DS3231_getAlarmType1(void)
{
    uint8_t values[4];
    uint8_t mode = 0;

    Chip_I2C_MasterCmdRead(i2cx, DS3231_ADDRESS, DS3231_REG_ALARM_1, values, 4);

    mode |= bcd2dec((values[3] & 0b01000000) >> 6);
    mode |= bcd2dec((values[2] & 0b01000000) >> 5);
    mode |= bcd2dec((values[1] & 0b01000000) >> 4);
    mode |= bcd2dec((values[0] & 0b01000000) >> 3);
    mode |= bcd2dec((values[0] & 0b00100000) >> 1);

    return (DS3231_alarm1_t)mode;
}

void DS3231_setAlarm1(uint8_t dydw, uint8_t hour, uint8_t minute, uint8_t second, DS3231_alarm1_t mode, bool armed)
{
	uint8_t buff[8] = {0};

    second 	= dec2bcd(second);
    minute 	= dec2bcd(minute);
    hour 	= dec2bcd(hour);
    dydw 	= dec2bcd(dydw);

    switch(mode)
    {
        case DS3231_EVERY_SECOND:
            second 	|= 0b10000000;
            minute 	|= 0b10000000;
            hour 	|= 0b10000000;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_S:
            second 	&= 0b01111111;
            minute 	|= 0b10000000;
            hour 	|= 0b10000000;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_M_S:
            second 	&= 0b01111111;
            minute 	&= 0b01111111;
            hour 	|= 0b10000000;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_H_M_S:
            second 	&= 0b01111111;
            minute 	&= 0b01111111;
            hour 	&= 0b01111111;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_DT_H_M_S:
            second 	&= 0b01111111;
            minute 	&= 0b01111111;
            hour 	&= 0b01111111;
            dydw 	&= 0b01111111;
            break;

        case DS3231_MATCH_DY_H_M_S:
            second 	&= 0b01111111;
            minute 	&= 0b01111111;
            hour 	&= 0b01111111;
            dydw 	&= 0b01111111;
            dydw 	|= 0b01000000;
            break;
    }

    buff[0] = DS3231_REG_ALARM_1;
    buff[1] = second;
    buff[2] = minute;
    buff[3] = hour;
    buff[4] = dydw;

    Chip_I2C_MasterSend(i2cx, DS3231_ADDRESS, buff, 5);

    DS3231_armAlarm1(armed);

    DS3231_clearAlarm1();
}

void DS3231_armAlarm1(bool armed)
{
    uint8_t value;
    value = readRegister8(DS3231_REG_CONTROL);

    if (armed)
    {
        value |= 0b00000001;
    } else
    {
        value &= 0b11111110;
    }

    writeRegister8(DS3231_REG_CONTROL, value);
}

bool DS3231_isArmed1(void)
{
    uint8_t value;
    value = readRegister8(DS3231_REG_CONTROL);
    value &= 0b00000001;
    return value;
}

void DS3231_clearAlarm1(void)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_STATUS);
    value &= 0b11111110;

    writeRegister8(DS3231_REG_STATUS, value);
}

void DS3231_getAlarm2(RTCAlarmTime* a)
{
    uint8_t values[4];

    Chip_I2C_MasterCmdRead(i2cx, DS3231_ADDRESS, DS3231_REG_ALARM_2, values, 4);

    a->day 		= bcd2dec(values[0] & 0b01111111);
    a->hour 	= bcd2dec(values[1] & 0b01111111);
    a->minute 	= bcd2dec(values[2] & 0b01111111);
    a->second 	= bcd2dec(values[3] & 0b01111111);
}

DS3231_alarm2_t DS3231_getAlarmType2(void)
{
    uint8_t values[4];
    uint8_t mode = 0;

    Chip_I2C_MasterCmdRead(i2cx, DS3231_ADDRESS, DS3231_REG_ALARM_2, values, 4);

    mode |= bcd2dec((values[3] & 0b01000000) >> 6);
    mode |= bcd2dec((values[2] & 0b01000000) >> 5);
    mode |= bcd2dec((values[1] & 0b01000000) >> 4);
    mode |= bcd2dec((values[0] & 0b01000000) >> 3);
    mode |= bcd2dec((values[0] & 0b00100000) >> 1);

    return (DS3231_alarm2_t)mode;
}

void DS3231_setAlarm2(uint8_t dydw, uint8_t hour, uint8_t minute, DS3231_alarm2_t mode, bool armed)
{
	uint8_t buff[8] = {0};

    minute 	= dec2bcd(minute);
    hour 	= dec2bcd(hour);
    dydw 	= dec2bcd(dydw);

    switch(mode)
    {
        case DS3231_EVERY_MINUTE:
            minute 	|= 0b10000000;
            hour 	|= 0b10000000;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_M:
            minute 	&= 0b01111111;
            hour 	|= 0b10000000;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_H_M:
            minute 	&= 0b01111111;
            hour 	&= 0b01111111;
            dydw 	|= 0b10000000;
            break;

        case DS3231_MATCH_DT_H_M:
            minute 	&= 0b01111111;
            hour 	&= 0b01111111;
            dydw 	&= 0b01111111;
            break;

        case DS3231_MATCH_DY_H_M:
            minute 	&= 0b01111111;
            hour 	&= 0b01111111;
            dydw 	&= 0b01111111;
            dydw 	|= 0b01000000;
            break;
    }

    buff[0] = DS3231_REG_ALARM_2;
    buff[1] = minute;
    buff[2] = hour;
    buff[3] = dydw;

    Chip_I2C_MasterSend(i2cx, DS3231_ADDRESS, buff, 4);

    DS3231_armAlarm2(armed);

    DS3231_clearAlarm2();
}

void DS3231_armAlarm2(bool armed)
{
    uint8_t value;
    value = readRegister8(DS3231_REG_CONTROL);

    if (armed)
    {
        value |= 0b00000010;
    } else
    {
        value &= 0b11111101;
    }

    writeRegister8(DS3231_REG_CONTROL, value);
}

bool DS3231_isArmed2(void)
{
    uint8_t value;
    value = readRegister8(DS3231_REG_CONTROL);
    value &= 0b00000010;
    value >>= 1;
    return value;
}

void DS3231_clearAlarm2(void)
{
    uint8_t value;

    value = readRegister8(DS3231_REG_STATUS);
    value &= 0b11111101;

    writeRegister8(DS3231_REG_STATUS, value);
}
